Add selection css only in the mobile devices

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,7 +16,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
 
+.mobile {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
